<resources>
    <string name="app_name">AgBase Weather Alerts</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_create_alert">Create Alert</string>
    <string name="temperature_title">Temperature</string>
    <string name="windspeed_title">Wind speed</string>
    <string name="rain_title">Rain</string>
    <string name="snow_title">Snow</string>
    <string name="humidity_title">Humidity</string>
    <string name="airpressure_title">Air pressure</string>
    <string name="weather_alert_label">AgBase Weather Alerts</string>
    <string name="display_weather_activity_weather_station_label">Weather Station</string>
    <string name="temp_output_placeholder">15\u00B0c</string>
    <string name="date_output_placeholder">September 25</string>
    <string name="time_output_placeholder">12:00am</string>
    <string name="display_weather_fragment_wind_label">Wind Speed</string>
    <string name="wind_speed_output_placeholder">5.0m/s</string>
    <string name="wind_direction_output_placeholder">NNW</string>
    <string name="humidity_output_placeholder">50.0%</string>
    <string name="air_pressure_output_placeholder">800.0hPa</string>
    <string name="display_weather_fragment_humidity_label">Humidity</string>
    <string name="display_weather_fragment_air_pressure_label">Air Pressure</string>
    <string name="precipitation_output_placeholder">Rain</string>
    <string name="menu_weather_report">Weather</string>
    <string name="menu_weather_alert_create">Create Weather Alert</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <string name="prefs_content_authority">nz.ac.elec.agbase.weather_app.prefs_content_authority</string>
    <string name="display_weather_fragment_wind_direction_label">Wind Direction</string>
    <string name="weather_alert_activity">Create Weather Alert</string>
    <string name="weather_station_label">Weather Station</string>
    <string name="use_condition_title">Use condition</string>
    <string name="use_condition_desc">Include this condition in your weather alert.</string>
    <string name="condition_type_title">Condition type</string>
    <string name="condition_value_title">Condition value</string>
    <string name="wind_speed_title">Wind Speed</string>
    <string name="air_pressure_title">Air Pressure</string>
    <string name="alert_name_default">Untitled</string>
    <string name="alert_description_default">Description of the weather alert.</string>
    <string name="above_rb_value">above</string>
    <string name="alert_value_default">0</string>
    <string name="intensity_rb_value">intensity</string>
    <string name="precipitation_intensity_value_title">Condition value [mm/h]</string>
    <string name="air_pressure_value_title">Condition value [hPa]</string>
    <string name="wind_speed_value_title">Condition value [m/s]</string>
    <string name="humidity_value_title">Condition value [%]</string>
    <string name="temperature_value_title">Condition value [\u00B0c]</string>
    <string name="menu_weather_alert_view">Manage Weather Alerts</string>
    <string name="btn_edit">Edit</string>
    <string name="description_label">Description</string>
    <string name="btn_delete">Delete</string>
    <string name="condition_label">Conditions</string>
    <string name="menu_weather_alert_logout">Logout</string>
    <string name="display_weather_fragment_wind_gust_label">Wind Gust</string>

    <string name="wind_speed_suffix">m/s</string>
    <string name="humidity_suffix">%</string>
    <string name="air_pressure_suffix">hPa</string>
    <string name="temperature_suffix">\u00B0c</string>

    <string name="north_value_label">N</string>
    <string name="north_north_east_value_label">NNE</string>
    <string name="north_east_value_label">NE</string>
    <string name="east_north_east_value_label">ENE</string>
    <string name="east_value_label">E</string>
    <string name="east_south_east_value_label">ESE</string>
    <string name="south_east_value_label">SE</string>
    <string name="south_south_east_value_label">SSE</string>
    <string name="south_value_label">S</string>
    <string name="south_south_west_value_label">SSW</string>
    <string name="south_west_value_label">SW</string>
    <string name="west_south_west_value_label">WSW</string>
    <string name="west_value_label">W</string>
    <string name="west_north_west_value_label">WNW</string>
    <string name="north_west_value_label">NW</string>
    <string name="north_north_west_value_label">NNW</string>
</resources>
